<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Purity U2D</string>

    <string name="title_currentRomVersion">Current ROM Version</string>
    <string name="title_releaseDate">Release Date</string>
    <string name="title_device">Device</string>
    <string name="title_notification">Purity OTA Update</string>

    <string name="subtitle_buildNotes">New build notes</string>

    <string name="button_check">Check for Update</string>
    <string name="button_proceed">Understood, please proceed</string>
    <string name="button_leave">Leave</string>
    <string name="button_dismiss">Dismiss</string>

    <string name="checkbox_maintainKernel">Maintain kernel after update</string>
    <string name="checkbox_wipeCache">Wipe Cache and Dalvik</string>

    <string name="message_noUpdate">You have the latest version</string>
    <string name="message_betaBuild">You are using an unreleased new build</string>
    <string name="message_update">New version available</string>
    <string name="message_deviceNotSupported">Sorry, %s is not supported</string>
    <string name="message_pleaseWait">Please wait …</string>
    <string name="messgage_downloading">Downloading …</string>
    <string name="message_rebooting">Rebooting to recovery …</string>
    <string name="message_downloadComplete">Download Complete</string>
    <string name="message_downloadAborted">Download Aborted</string>
    <string name="message_clickInstall">Click to reboot and install</string>
    <string name="message_clickReceive">Click to receive this update</string>
    <string name="message_failure_serviceNA">Service unavailable</string>
    <string name="message_failure_error">Oops, something went wrong</string>
    <string name="message_failure_downloadInProgress">Download in progress!</string>
    <string name="message_failure_URL">Malformed download URL!</string>
    <string name="messgae_failure_badDownload">Corrupted download detected</string>
    <string name="messgae_failure_badMD5">Bad MD5</string>
    <string name="messgae_failue_TWRP">TWRP not detected, Auto-install will not work. You may proceed and install the ROM zip manually from recovery. You will find the zip file in your Download folder</string>
    <string name="message_failure_su">Failed to get SUPERUSER access!</string>


    <string name="dialog_title_twrpNF">TWRP Recovery not detected</string>
    <string name="dialog_message_su">Asking for SUPERUSER access …</string>

    <string name="text_AutoCheck">AutoCheck interval</string>

    <string-array name="autocheck_ops">
        <item>Once every 1 hour</item>
        <item>Once every 6 hours</item>
        <item>Once every 12 hours</item>
        <item>Once every 24 hours</item>
        <item>OFF</item>
    </string-array>

    <string name="info_line1">Download location: [ %s ]</string>
    <string name="info_line2">Place any zip (mod, etc…) inside [ %s ] to be flashed after updating.</string>
    <string name="info_line3">When the download is complete click on the shown notification to reboot and install the update.</string>
    <string name="action_settings">Settings</string>
    <string name="button_showMoreOptions">More options</string>

</resources>
